[package]
name = "rust-http-server"
version = "0.1.0"
authors = ["Jeremiah <jeremiahcrosby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
custom_error = "1.8.0"
clap = "3.0.0-beta.2"
regex = "1.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
flexi_logger = "0.17.1"
tokio = { version = "1.5.0", features = ["full"] }